Fixed tabbing cycle when the menu is collapsed

--- a/src/main/resources/assets/styles/menu.less
+++ b/src/main/resources/assets/styles/menu.less
@@ -208,6 +208,7 @@ button.menu-button {
 
   .menu-info-panel {
     width: 33.333%;
+    max-width: 580px;
     height: 100%;
     flex-shrink: 0;
     background: rgba(0, 0, 0, 0.25);
